components/networkpolicies/default/restrict-egress-to-psql-1.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-egress-to-psql-1
  namespace: default
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: flux-demo
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: psql-1
    ports:
    - protocol: TCP
      port: 5432
  policyTypes:
  - Egress
